fixed tooltips by removing gray window behind them.

--- a/source/org/martus/client/swingui/jfx/css/Martus.css
+++ b/source/org/martus/client/swingui/jfx/css/Martus.css
@@ -1,5 +1,5 @@
 .root {
-	-fx-background-color: #e6e7e9;
+/*	-fx-background-color: #e6e7e9; caused tooltips to have ugly gray window behind them*/
   -fx-font-family: "Helvetica";
   -fx-line-height: 28px inherit;
 }
